basic html and css styling

--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,191 @@
-/* No CSS *//*# sourceMappingURL=main.css.map */
+* {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  font-family: 'Roboto',arial, sans-serif;
+}
+
+:root {
+  --primary-color: #007af3;
+}
+
+body {
+  margin: 0;
+  font-size: 13px;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  display: inline;
+}
+
+img {
+  width: auto;
+  height: 33px;
+  display: inline;
+  margin: 1em;
+  vertical-align: top;
+}
+
+input {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 620px;
+  height: 40px;
+  padding: 10px;
+  border-radius: 20px;
+  border: 1px solid #c7c7c7;
+  vertical-align: top;
+}
+
+h2 {
+  font-weight: normal;
+  margin: 0 0 3px 0;
+}
+
+h2 a {
+  color: #0003a6;
+}
+
+h2 a:hover {
+  text-decoration: underline;
+}
+
+.link {
+  color: green;
+  font-size: 14px;
+}
+
+a {
+  text-decoration: none;
+  color: #303030;
+}
+
+p {
+  margin: 0;
+}
+
+span {
+  color: #969696;
+}
+
+.header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.searchTools {
+  margin-top: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  min-width: 832px;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+  vertical-align: bottom;
+  border-bottom: 1px solid #d1d1d1;
+}
+
+.searchTools .searchToolOptions {
+  padding-left: 2em;
+  font-size: 13px;
+  margin-top: 1em;
+}
+
+.searchTools .searchToolOptions li {
+  padding: 10px;
+}
+
+.searchTools .searchToolOptions .left {
+  float: left;
+  margin-right: 10px;
+  margin-left: 0px;
+}
+
+.searchTools .searchToolOptions .right {
+  float: right;
+  margin-right: 0px;
+  margin-left: 10px;
+}
+
+.active {
+  font-weight: bold;
+  border-bottom: 3px solid #1A73E8;
+}
+
+.active a {
+  color: #1A73E8 !important;
+}
+
+.searchResults {
+  margin-left: 2em;
+  width: 620px;
+  display: inline-block;
+}
+
+.searchResults .numberOfResults {
+  margin-top: 15px;
+  color: #969696;
+}
+
+.searchResults .result {
+  margin: 20px 0 20px 5px;
+}
+
+.searchResults .result p {
+  margin: 3px 0 25px 0;
+  color: #545454;
+  line-height: 1.5em;
+}
+
+.blue {
+  color: #325df6;
+}
+
+.red {
+  color: #da3f3f;
+}
+
+.green {
+  color: #4c8c44;
+}
+
+.yellow {
+  color: #ecb81d;
+}
+
+.footer {
+  position: absolute;
+  background: #f2f2f2;
+  width: 100%;
+  padding: 10px;
+  border-top: 1px solid #d1d1d1;
+}
+
+.footer p, .footer ul {
+  margin-left: 162px;
+}
+
+.footer p {
+  margin-bottom: 20px;
+}
+
+.footer li {
+  margin-right: 20px;
+}
+
+@media only screen and (min-width: 768px) {
+  .searchTools .searchToolOptions {
+    padding-left: 8em;
+  }
+  .searchResults {
+    margin-left: 8em;
+  }
+}
+/*# sourceMappingURL=main.css.map */
