--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,7 @@ input {
   border-radius: 20px;
   border: 1px solid #c7c7c7;
   vertical-align: top;
+  margin: 0 1em 0 0;
 }
 
 h2 {
@@ -77,6 +78,9 @@ span {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .searchTools {
@@ -125,7 +129,6 @@ span {
 
 .searchResults {
   margin-left: 2em;
-  width: 620px;
   display: inline-block;
 }
 
@@ -135,29 +138,30 @@ span {
 }
 
 .searchResults .result {
-  margin: 20px 0 20px 5px;
+  margin: 20px 0 20px 0px;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
 }
 
-.searchResults .result p {
-  margin: 3px 0 25px 0;
+.searchResults .result .result-item {
+  display: inline-block;
+}
+
+.searchResults .result .result-item p {
+  margin: 3px 0 1em 0;
   color: #545454;
   line-height: 1.5em;
 }
 
-.blue {
-  color: #325df6;
+.searchResults .result .result-visualisation {
+  display: none;
+  float: right;
 }
 
-.red {
-  color: #da3f3f;
-}
-
-.green {
-  color: #4c8c44;
-}
-
-.yellow {
-  color: #ecb81d;
+.searchResults .result .result-visualisation img {
+  margin: 0;
+  min-height: 150px;
 }
 
 .footer {
