--- a/css/main.scss
+++ b/css/main.scss
@@ -39,6 +39,7 @@ input {
   border-radius: 20px;
   border: 1px solid rgb(199, 199, 199);
   vertical-align: top;
+  margin: 0 1em 0 0;
 }
 
 h2 {
@@ -74,7 +75,7 @@ span {
 
 .header {
   display: flex;
-  
+  align-items: center;
 }
 
 .searchTools {
@@ -119,7 +120,6 @@ span {
 
 .searchResults {
   margin-left: 2em;
-  width: 620px;
   display: inline-block;
 
   .numberOfResults {
@@ -128,30 +128,29 @@ span {
   }
 
   .result {
-    margin: 20px 0 20px 5px;
+    margin: 20px 0 20px 0px;
+    height: fit-content;
 
-    p {
-      margin: 3px 0 25px 0;
-      color: #545454;
-      line-height: 1.5em;
+    .result-item {
+      display: inline-block;
+
+      p {
+        margin: 3px 0 1em 0;
+        color: #545454;
+        line-height: 1.5em;
+      }
+    }
+
+    .result-visualisation{
+      display: none;
+      float: right;
+
+      img {
+        margin: 0;
+        min-height: 150px;
+      }
     }
   }
-}
-
-.blue {
-  color: rgb(50, 93, 246);
-}
-
-.red {
-  color: rgb(218, 63, 63);
-}
-
-.green {
-  color: rgb(76, 140, 68);
-}
-
-.yellow {
-  color: rgb(236, 184, 29);
 }
 
 .footer {
