--- a/css/main.css
+++ b/css/main.css
@@ -142,11 +142,11 @@ span {
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
-  max-width: 600px;
 }
 
 .searchResults .result .result-item {
   display: inline-block;
+  max-width: 600px;
 }
 
 .searchResults .result .result-item h2, .searchResults .result .result-item a {
@@ -160,13 +160,14 @@ span {
 }
 
 .searchResults .result .result-visualisation {
-  display: none;
-  float: right;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .searchResults .result .result-visualisation img {
   margin: 0;
-  min-height: 150px;
+  min-height: 200px;
 }
 
 .footer {
@@ -195,6 +196,16 @@ span {
   }
   .searchResults {
     margin-left: 8em;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .searchResults .result .result-visualisation {
+    display: inline-block;
+  }
+  .searchResults .result .result-visualisation img {
+    margin: 0;
+    min-height: 200px;
   }
 }
 /*# sourceMappingURL=main.css.map */
