--- a/css/main.scss
+++ b/css/main.scss
@@ -130,10 +130,11 @@ span {
   .result {
     margin: 20px 0 20px 0px;
     height: fit-content;
-    max-width: 600px;
+    
 
     .result-item {
       display: inline-block;
+      max-width: 600px;
 
       h2, a {
         white-space:nowrap;
@@ -147,12 +148,11 @@ span {
     }
 
     .result-visualisation{
-      display: none;
-      float: right;
+      display: flex;
 
       img {
         margin: 0;
-        min-height: 150px;
+        min-height: 200px;
       }
     }
   }
@@ -188,5 +188,16 @@ span {
   .searchResults {
     margin-left: 8em;
   }
+}
 
+@media only screen and (min-width: 1200px) {
+
+  .searchResults .result .result-visualisation{
+      display: inline-block;
+
+      img {
+        margin: 0;
+        min-height: 200px;
+      }
+    }
 }
