--- a/css/main.css
+++ b/css/main.css
@@ -202,9 +202,10 @@ span {
 @media only screen and (min-width: 1200px) {
   .searchResults .result .result-visualisation {
     display: inline-block;
+    vertical-align: top;
+    margin: 0 0 0 4em;
   }
   .searchResults .result .result-visualisation img {
-    margin: 0;
     min-height: 200px;
   }
 }
