--- a/css/main.scss
+++ b/css/main.scss
@@ -112,10 +112,10 @@ span {
 .active {
   font-weight: bold;
   border-bottom: 3px solid #1A73E8;
-}
 
-.active a {
-  color: #1A73E8 !important;
+  a {
+    color: #1A73E8 !important;
+  }
 }
 
 .searchResults {
@@ -130,7 +130,6 @@ span {
   .result {
     margin: 20px 0 20px 0px;
     height: fit-content;
-    
 
     .result-item {
       display: inline-block;
@@ -149,7 +148,7 @@ span {
 
     .result-visualisation{
       display: flex;
-
+      
       img {
         margin: 0;
         min-height: 200px;
@@ -194,9 +193,10 @@ span {
 
   .searchResults .result .result-visualisation{
       display: inline-block;
+      vertical-align: top;
+      margin: 0 0 0 4em;
 
       img {
-        margin: 0;
         min-height: 200px;
       }
     }
