--- a/css/feedback.scss
+++ b/css/feedback.scss
@@ -4,7 +4,10 @@
             box-sizing: border-box;
     font-family: 'Google Sans',arial, sans-serif;
   }
-  
+
+body {
+  margin: 2em
+}
 
 .likert {
 
@@ -15,4 +18,97 @@
       float: left;
       list-style-type: none;
     }
+}
+
+.slider-container {
+  width: 100%;
+  margin: 2em 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .slider {
+    -webkit-appearance: none;
+    width: 50%;
+    height: 15px;
+    border-radius: 5px;  
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
   }
+  
+  .slider:hover {
+    opacity: 1;
+  }
+  
+  .slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%; 
+    background: #1A73E8;
+    cursor: pointer;
+  }
+  
+  .slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #1A73E8;
+    cursor: pointer;
+  }
+
+  p {
+    padding: 0 1em;
+  }
+}
+
+input[type=text], select, textarea{
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  resize: vertical;
+}
+
+.nextPage {
+
+  margin: 6em 0 2em 0;
+  display: flex;
+  justify-content: center;
+  
+  a {
+    font-size: 16pt;
+    color: #1a73e8;
+  }
+
+  a:hover {
+    text-decoration: underline;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  
+  .slider-container {
+    width: 75%;
+  }
+
+  input[type=text], select, textarea{
+    width: 75%;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  
+  .slider-container {
+    width: 50%;
+  }
+
+  input[type=text], select, textarea{
+    width: 50%;
+  }
+}
