--- a/css/main.scss
+++ b/css/main.scss
@@ -31,18 +31,6 @@ img {
   vertical-align: top;
 }
 
-input {
-  display: flex;
-  width: 620px;
-  height: 40px;
-  padding: 10px;
-  border-radius: 20px;
-  border: 1px solid rgb(199, 199, 199);
-  vertical-align: top;
-  margin: 0 1em 0 0;
-}
-
-
 a {
   text-decoration: none;
   color: rgb(48, 48, 48);
@@ -59,6 +47,17 @@ span {
 .header {
   display: flex;
   align-items: center;
+
+  input {
+    display: flex;
+    width: 620px;
+    height: 40px;
+    padding: 10px;
+    border-radius: 20px;
+    border: 1px solid rgb(199, 199, 199);
+    vertical-align: top;
+    margin: 0 1em 0 0;
+  }
 }
 
 .searchTools {
@@ -141,9 +140,40 @@ span {
     .result-rating {
       display: flex;
       justify-content: center;
+      align-items: center;
 
-      input {
+      .slider {
+        -webkit-appearance: none;
         width: 50%;
+        height: 15px;
+        border-radius: 5px;  
+        background: #d3d3d3;
+        outline: none;
+        opacity: 0.7;
+        -webkit-transition: .2s;
+        transition: opacity .2s;
+      }
+
+      .slider:hover {
+        opacity: 1;
+      }
+      
+      .slider::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        appearance: none;
+        width: 25px;
+        height: 25px;
+        border-radius: 50%; 
+        background: #1A73E8;
+        cursor: pointer;
+      }
+      
+      .slider::-moz-range-thumb {
+        width: 25px;
+        height: 25px;
+        border-radius: 50%;
+        background: #1A73E8;
+        cursor: pointer;
       }
     }
 
@@ -158,7 +188,8 @@ span {
       }
 
       img:hover {
-        transform: scale(2);
+        transform: scale(1.75);
+        border: 1px solid #aaaaaa;
       }
     }
   }
@@ -166,12 +197,17 @@ span {
 
 .nextPage {
 
-  margin: 2em;
+  margin: 6em 0 2em 0;
   display: flex;
   justify-content: center;
   
   a {
     font-size: 16pt;
+    color: #1a73e8;
+  }
+
+  a:hover {
+    text-decoration: underline;
   }
 }
 
