Adjusted all sliders
helpfulness slider now 0-100, credibilty rating slider labels updated

--- a/css/main.css
+++ b/css/main.css
@@ -156,12 +156,13 @@ span {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-bottom: 4em;
 }
 
 .searchResults .result .result-rating .slider {
