--- a/css/main.scss
+++ b/css/main.scss
@@ -107,7 +107,7 @@ span {
     margin: 20px 0 20px 0px;
     height: fit-content;
 
-    .result-item {
+    .snippet {
       display: inline-block;
       max-width: 600px;
 
@@ -137,7 +137,7 @@ span {
       }
     }
 
-    .result-rating {
+    .rating {
       display: flex;
       justify-content: space-evenly;
       align-items: center;
@@ -178,7 +178,7 @@ span {
       }
     }
 
-    .result-visualisation{
+    .visualisation-complex {
       display: flex;
       justify-content: center;
       
@@ -191,6 +191,16 @@ span {
       img:hover {
         transform: scale(1.75);
         border: 1px solid #aaaaaa;
+      }      
+    }
+
+    .visualisation-simple {
+      .fa {
+        font-size: 28px;
+      }
+
+      .checked {
+        color: orange;
       }
     }
   }
@@ -242,18 +252,18 @@ span {
 
     display: grid;
     grid-template-areas:
-    'item visualisation'
+    'snippet visualisation'
     'rating visualisation';
     
-    .result-item {
-      grid-area: item;
+    .snippet {
+      grid-area: snippet;
     }
 
-    .result-rating {
+    .rating {
       grid-area: rating;
     }
 
-    .result-visualisation {
+    .visualisation-complex {
         display: inline-block;
         vertical-align: top;
         margin: 0 0 0 4em;
@@ -263,5 +273,16 @@ span {
           min-height: 200px;
         }
     }
+
+    .visualisation-simple {
+      display: inline-block;
+      vertical-align: top;
+      margin: 0 0 0 4em;
+      grid-area: visualisation;
+
+      img {
+        min-height: 200px;
+      }
+  }
   }
 }
