--- a/css/main.css
+++ b/css/main.css
@@ -124,7 +124,7 @@ span {
 
 .searchResults .result .snippet {
   display: inline-block;
-  max-width: 600px;
+  width: 600px;
 }
 
 .searchResults .result .snippet .link {
