--- a/css/main.scss
+++ b/css/main.scss
@@ -109,7 +109,7 @@ span {
 
     .snippet {
       display: inline-block;
-      max-width: 600px;
+      width: 600px;
 
       .link {
         color: #202124;
