--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,18 @@ span {
   color: #969696;
 }
 
+.text-center {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+          transform: translateX(-50%) translateY(-50%);
+  font-size: 24px;
+}
+
 .header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -224,12 +236,22 @@ span {
   border: 1px solid #aaaaaa;
 }
 
-.searchResults .result .visualisation-simple .fa {
-  font-size: 28px;
+.searchResults .result .visualisation-simple {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-.searchResults .result .visualisation-simple .checked {
-  color: orange;
+.searchResults .result .visualisation-simple img {
+  margin: 0;
+  min-height: 50px;
+  -webkit-transition: -webkit-transform .3s;
+  transition: -webkit-transform .3s;
+  transition: transform .3s;
+  transition: transform .3s, -webkit-transform .3s;
 }
 
 .nextPage {
@@ -310,7 +332,7 @@ span {
     grid-area: visualisation;
   }
   .searchResults .result .visualisation-simple img {
-    min-height: 200px;
+    min-height: 50px;
   }
 }
 /*# sourceMappingURL=main.css.map */
