--- a/css/main.scss
+++ b/css/main.scss
@@ -44,6 +44,17 @@ span {
   color: rgb(150, 150, 150);
 }
 
+.text-center {
+  margin: 0;
+  padding:0;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left:50%;
+  transform: translateX(-50%) translateY(-50%);
+  font-size: 24px;
+}
+
 .header {
   display: flex;
   align-items: center;
@@ -195,12 +206,13 @@ span {
     }
 
     .visualisation-simple {
-      .fa {
-        font-size: 28px;
-      }
-
-      .checked {
-        color: orange;
+      display: flex;
+      justify-content: center;
+      
+      img {
+        margin: 0;
+        min-height: 50px;
+        transition: transform .3s;
       }
     }
   }
@@ -281,7 +293,7 @@ span {
       grid-area: visualisation;
 
       img {
-        min-height: 200px;
+        min-height: 50px;
       }
   }
   }
