--- a/css/tutorial.css
+++ b/css/tutorial.css
@@ -8,7 +8,7 @@ body {
   margin: auto 25vw;
 }
 
-.hidden {
-  visibility: hidden;
+.h1 {
+  text-align: center;
 }
-/*# sourceMappingURL=demographics.css.map */
+/*# sourceMappingURL=tutorial.css.map */
