--- a/css/tutorial.scss
+++ b/css/tutorial.scss
@@ -5,11 +5,11 @@
     font-family: 'Google Sans',arial, sans-serif;
   }
 
-  body {
+body {
     margin: auto 25vw;
 }
 
-
-.hidden {
-    visibility: hidden;
+.h1 {
+    text-align: center;
 }
+
