--- a/css/survey.scss
+++ b/css/survey.scss
@@ -4,20 +4,16 @@
             box-sizing: border-box;
             font-family: 'Google Sans',arial, sans-serif;
         }
+  
+:root {
+  --primary-color: #007af3;
+}
 
 body {
     margin: 0;
     font-size: 13px;
 }
-  
-ul {
-    margin: 0;
-    padding: 0;
-}
-  
-li {
-    display: inline;
-}
+
   
 img {
     width: auto;
@@ -52,44 +48,35 @@ span {
 }
 
 .navigation {
-  position: relative;
-
+  padding-top: 10px;
+  display: flex;
   width: 100%;
-  background-color: #333;
-  overflow: hidden;
+  height: 100%;
+  justify-content: center;
+
+  .btn {
+    color: var(--primary-color);
+    border: 3px solid var(--primary-color);
+    font-weight: bold;
+    border-radius: 5em;
+    margin-top: -.2em;
+    margin-right: 5px;
+    margin-left: 5px;
+    cursor: pointer;
   
-
-  bottom: 0;
-  left: 0;
-  text-align: center;
-
-  display: grid;
-      grid-template-areas:
-      'left right';
-
-  .left {
-    grid-area: left;
+    &:hover {
+      background: var(--primary-color);
+      color: white;
+    }
   }
+}
 
-  .right {
-    grid-area: right;
-  }
+.explanations {
 
-  a {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-    float: left;
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  a:hover {
-    background-color: #111; 
+  margin: auto 25vw;
+
+  li {
+    display: list-item;
   }
 }
 
@@ -120,6 +107,16 @@ span {
         white-space: nowrap;
         justify-content: space-between;
         border-bottom: 1px solid rgb(209, 209, 209);
+
+          
+        ul {
+          margin: 0;
+          padding: 0;
+        }
+
+        li {
+          display: inline;
+        }
       
         .searchToolOptions {
             padding-left: 2em;
@@ -147,11 +144,6 @@ span {
     .searchResults {
         margin-left: 2em;
         display: inline-block;
-      
-        .numberOfResults {
-          margin-top: 15px;
-          color: rgb(150, 150, 150);
-        }
       
         .result {
           margin: 20px 0 20px 0px;
@@ -234,7 +226,8 @@ span {
             
             img {
               margin: 0;
-              min-width: 200px;
+              width: 200px;
+              height: auto;
               transition: transform .3s;
             }
       
@@ -378,7 +371,7 @@ span {
       display: grid;
       grid-template-areas:
       'snippet visualisation'
-      'rating visualisation';
+      'rating empty';
       
       .snippet {
         grid-area: snippet;
@@ -388,27 +381,9 @@ span {
         grid-area: rating;
       }
   
-      .visualisation-complex {
-          display: inline-block;
-          vertical-align: top;
-          margin: 0 0 0 4em;
-          grid-area: visualisation;
-  
-          img {
-            min-height: 200px;
-          }
-      }
-  
-      .visualisation-simple {
-        display: inline-block;
-        vertical-align: top;
-        margin: 0 0 0 4em;
+      .visualisation {
         grid-area: visualisation;
-  
-        img {
-          min-height: 50px;
-        }
-    }
+      }
     }
 }
 
