--- a/css/aufklaerung.css
+++ b/css/aufklaerung.css
@@ -28,44 +28,6 @@ p {
   text-align: justify;
 }
 
-.navigation {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  padding: 0;
-}
-
-.button-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  padding: 20px 0;
-}
-
-.button-container > div:hover {
-  color: white;
-  background-color: #002444;
-  border-color: #002444;
-  border-radius: 2px;
-  border-width: 2px;
-  border-style: solid;
-  cursor: pointer;
-}
-
 .button-container > div {
   padding: 10px 20px;
   color: #002444;
@@ -80,12 +42,35 @@ p {
           user-select: none;
 }
 
-.warning {
-  display: block;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
-  color: red;
+.nextPage {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 2em;
+  margin-bottom: 2em;
+  width: 100%;
+  height: 100%;
+}
+
+.nextPage .btn {
+  color: #007af3;
+  background: white;
+  border: 3px solid #007af3;
+  font-weight: bold;
+  font-size: 24px;
+  border-radius: 5em;
+  margin-top: -.2em;
+  margin-right: 5px;
+  margin-left: 5px;
+  cursor: pointer;
+}
+
+.nextPage .btn:hover {
+  background: #007af3;
+  color: white;
 }
 
 .hidden {
@@ -98,10 +83,16 @@ label {
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
+  display: inline-block;
 }
 
 input {
   width: 21px;
   height: 21px;
+  display: inline-block;
+}
+
+input[type=checkbox] {
+  vertical-align: middle;
 }
 /*# sourceMappingURL=aufklaerung.css.map */
