--- a/css/aufklaerung.scss
+++ b/css/aufklaerung.scss
@@ -29,30 +29,6 @@ p {
     text-align: justify;
 }
 
-.navigation {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 0;
-}
-
-.button-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 20px 0;
-}
-
-.button-container>div:hover {
-    color: white;
-    background-color: rgb(0, 36, 68);
-    border-color: rgb(0, 36, 68);
-    border-radius: 2px;
-    border-width: 2px;
-    border-style: solid;
-    cursor: pointer;
-}
-
 .button-container>div {
     padding: 10px 20px;
     color: rgb(0, 36, 68);
@@ -64,14 +40,31 @@ p {
     user-select: none;
 }
 
-.button-next {}
-
-.button-prev {}
-
-.warning {
-    display: block;
-    align-self: center;
-    color: red;
+.nextPage {
+    display: flex;
+    justify-content: center;
+    margin-top: 2em;
+    margin-bottom: 2em;
+    width: 100%;
+    height: 100%;
+    
+    .btn {
+        color:#007af3;
+        background: white;
+        border: 3px solid #007af3;
+        font-weight: bold;
+        font-size: 24px;
+        border-radius: 5em;
+        margin-top: -.2em;
+        margin-right: 5px;
+        margin-left: 5px;
+        cursor: pointer;
+  
+        &:hover {
+            background: #007af3;
+            color: white;
+        }
+    }
 }
 
 .hidden {
@@ -81,9 +74,16 @@ p {
 label {
     font-size: large;
     user-select: none;
+    display: inline-block;
 }
 
 input {
     width: 21px;
     height: 21px;
+    display: inline-block;
+}
+
+input[type=checkbox]
+{
+    vertical-align:middle;
 }
