--- a/css/survey.css
+++ b/css/survey.css
@@ -60,8 +60,10 @@ span {
 
 .navigation .btn {
   color: var(--primary-color);
+  background: white;
   border: 3px solid var(--primary-color);
   font-weight: bold;
+  font-size: 24px;
   border-radius: 5em;
   margin-top: -.2em;
   margin-right: 5px;
@@ -250,11 +252,15 @@ span {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  width: 200px;
 }
 
 .serp .searchResults .result .visualisation img {
   margin: 0;
-  width: 200px;
+  display: block;
+  -o-object-fit: contain;
+     object-fit: contain;
+  width: 100%;
   height: auto;
   -webkit-transition: -webkit-transform .3s;
   transition: -webkit-transform .3s;
@@ -263,13 +269,13 @@ span {
 }
 
 .serp .searchResults .result .visualisation img:hover {
-  -webkit-transform: scale(1.75);
-          transform: scale(1.75);
+  -webkit-transform: scale(2);
+          transform: scale(2);
   border: 1px solid #aaaaaa;
 }
 
 .feedback {
-  margin: 2em;
+  margin: auto 25vw;
 }
 
 .feedback .likert {
@@ -347,27 +353,51 @@ span {
   resize: vertical;
 }
 
+.demographics {
+  margin: auto 25vw;
+}
+
+.demographics input[type=text], .demographics select, .demographics textarea {
+  width: 100%;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 .demographics .hidden {
   visibility: hidden;
 }
 
 .nextPage {
-  margin: 6em 0 2em 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  margin-top: 2em;
+  width: 100%;
+  height: 100%;
 }
 
-.nextPage a {
-  font-size: 16pt;
-  color: #1a73e8;
+.nextPage .btn {
+  color: #007af3;
+  background: white;
+  border: 3px solid #007af3;
+  font-weight: bold;
+  font-size: 24px;
+  border-radius: 5em;
+  margin-top: -.2em;
+  margin-right: 5px;
+  margin-left: 5px;
+  cursor: pointer;
 }
 
-.nextPage a:hover {
-  text-decoration: underline;
+.nextPage .btn:hover {
+  background: #007af3;
+  color: white;
 }
 
 .footer {
@@ -398,6 +428,11 @@ span {
 }
 
 @media only screen and (min-width: 1200px) {
+  .empty {
+    -ms-grid-row: 2;
+    -ms-grid-column: 2;
+    grid-area: empty;
+  }
   .searchResults .result {
     display: -ms-grid;
     display: grid;
