--- a/css/survey.scss
+++ b/css/survey.scss
@@ -56,8 +56,10 @@ span {
 
   .btn {
     color: var(--primary-color);
+    background: white;
     border: 3px solid var(--primary-color);
     font-weight: bold;
+    font-size: 24px;
     border-radius: 5em;
     margin-top: -.2em;
     margin-right: 5px;
@@ -223,16 +225,20 @@ span {
           .visualisation {
             display: flex;
             justify-content: center;
+
+            width: 200px;
             
             img {
               margin: 0;
-              width: 200px;
+              display: block;
+              object-fit: contain;
+              width: 100%;
               height: auto;
               transition: transform .3s;
             }
       
             img:hover {
-              transform: scale(1.75);
+              transform: scale(2);
               border: 1px solid #aaaaaa;
             }      
           }
@@ -241,9 +247,9 @@ span {
 }
 
 .feedback {
-    margin: 2em;
+  margin: auto 25vw;
 
-    .likert {
+  .likert {
 
         display: inline-flex;
         width: 100%;
@@ -252,9 +258,9 @@ span {
           float: left;
           list-style-type: none;
         }
-    }
+  }
     
-    .slider-container {
+  .slider-container {
       width: 100%;
       margin: 2em 0;
       display: flex;
@@ -298,38 +304,58 @@ span {
       p {
         padding: 0 1em;
       }
-    }
+  }
     
-    input[type=text], select, textarea{
-      width: 100%;
-      padding: 12px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      box-sizing: border-box;
-      resize: vertical;
-    }
+  input[type=text], select, textarea{
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    resize: vertical;
+  }
 }
 
 .demographics {
-    .hidden {
-        visibility: hidden;
-    }
+  margin: auto 25vw;
+
+  input[type=text], select, textarea{
+    width: 100%;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+
+  .hidden {
+      visibility: hidden;
+  }
 }
 
 .nextPage {
+  display: flex;
+  justify-content: center;
+  margin-top: 2em;
+  width: 100%;
+  height: 100%;
   
-    margin: 6em 0 2em 0;
-    display: flex;
-    justify-content: center;
-    
-    a {
-      font-size: 16pt;
-      color: #1a73e8;
-    }
-  
-    a:hover {
-      text-decoration: underline;
-    }
+  .btn {
+      color:#007af3;
+      background: white;
+      border: 3px solid #007af3;
+      font-weight: bold;
+      font-size: 24px;
+      border-radius: 5em;
+      margin-top: -.2em;
+      margin-right: 5px;
+      margin-left: 5px;
+      cursor: pointer;
+
+      &:hover {
+          background: #007af3;
+          color: white;
+      }
+  }
 }
   
 .footer {
@@ -366,25 +392,28 @@ span {
   
 @media only screen and (min-width: 1200px) {
   
-    .searchResults .result {
-  
-      display: grid;
-      grid-template-areas:
-      'snippet visualisation'
-      'rating empty';
+  .empty {
+    grid-area: empty;
+  }
+
+  .searchResults .result {
+    display: grid;
+    grid-template-areas:
+    'snippet visualisation'
+    'rating empty';
       
-      .snippet {
-        grid-area: snippet;
-      }
-  
-      .rating {
-        grid-area: rating;
-      }
-  
-      .visualisation {
-        grid-area: visualisation;
-      }
+    .snippet {
+      grid-area: snippet;
     }
+  
+    .rating {
+      grid-area: rating;
+    }
+  
+    .visualisation {
+      grid-area: visualisation;
+    }
+  }
 }
 
 @media only screen and (min-width: 1600px) {
