--- a/css/tutorial.css
+++ b/css/tutorial.css
@@ -8,7 +8,37 @@ body {
   margin: auto 25vw;
 }
 
-.h1 {
+h1 {
   text-align: center;
+}
+
+.nextPage {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 2em;
+  width: 100%;
+  height: 100%;
+}
+
+.nextPage .btn {
+  color: #007af3;
+  background: white;
+  border: 3px solid #007af3;
+  font-weight: bold;
+  font-size: 24px;
+  border-radius: 5em;
+  margin-top: -.2em;
+  margin-right: 5px;
+  margin-left: 5px;
+  cursor: pointer;
+}
+
+.nextPage .btn:hover {
+  background: #007af3;
+  color: white;
 }
 /*# sourceMappingURL=tutorial.css.map */
