--- a/css/tutorial.scss
+++ b/css/tutorial.scss
@@ -9,7 +9,32 @@ body {
     margin: auto 25vw;
 }
 
-.h1 {
+h1 {
     text-align: center;
 }
 
+.nextPage {
+    display: flex;
+    justify-content: center;
+    margin-top: 2em;
+    width: 100%;
+    height: 100%;
+    
+    .btn {
+        color:#007af3;
+        background: white;
+        border: 3px solid #007af3;
+        font-weight: bold;
+        font-size: 24px;
+        border-radius: 5em;
+        margin-top: -.2em;
+        margin-right: 5px;
+        margin-left: 5px;
+        cursor: pointer;
+  
+        &:hover {
+            background: #007af3;
+            color: white;
+        }
+    }
+}
